--- a/index.html
+++ b/index.html
@@ -990,6 +990,97 @@
         opacity: 0;
         overflow: hidden;
       }
+      /* Pagination Styles */
+      .pagination-container {
+        display: none;
+        justify-content: center;
+        margin: 30px 0;
+        border-bottom: 1px solid #e5e5e5;
+        padding-bottom: 30px;
+      }
+
+      .pagination {
+        display: flex;
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        gap: 6px;
+      }
+
+      .pagination li {
+        margin: 0 2px;
+      }
+
+      .pagination button {
+        padding: 10px 14px;
+        border: 1px solid #ddd;
+        background: white;
+        color: #333;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: all 0.2s ease;
+        font-family: var(--font-primary);
+        font-size: 16px;
+        min-width: 42px;
+      }
+
+      .pagination .active button {
+        background-color: var(--secondary-color);
+        color: white;
+        border-color: var(--secondary-color);
+        font-weight: bold;
+      }
+
+      .pagination button:hover:not([disabled]) {
+        background-color: #f0f0f0;
+        border-color: #bbb;
+      }
+
+      .pagination .disabled span {
+        padding: 10px 14px;
+        border: 1px solid #ddd;
+        background: #f8f9fa;
+        color: #aaa;
+        border-radius: 4px;
+        cursor: not-allowed;
+        min-width: 42px;
+        display: inline-block;
+        text-align: center;
+      }
+
+      .pagination .ellipsis {
+        display: flex;
+        align-items: center;
+        padding: 0 8px;
+        color: #666;
+        font-size: 16px;
+      }
+
+      /* Enhance pagination for mobile */
+      @media (max-width: 767px) {
+        .pagination-container {
+          padding: 0 10px 25px;
+        }
+
+        .pagination {
+          gap: 4px;
+        }
+
+        .pagination button,
+        .pagination .disabled span {
+          padding: 8px 12px;
+          min-width: 36px;
+          font-size: 14px;
+        }
+
+        .pagination li:not(.active):not(.prev):not(.next):not(.ellipsis) {
+          display: none;
+        }
+
+        .pagination li.ellipsis {
+          display: flex;
+        }
+      }
       /* Responsive Styles - Consolidated */
       @media (min-width: 1024px) and (max-width: 1246px) {
         .communications-sidebar {
@@ -1191,6 +1282,27 @@
           opacity: 1;
         }
       }
+
+      /* Responsive grid styles for tablet and mobile */
+      @media (max-width: 1023px) {
+        .products-grid {
+          row-gap: 20px;
+          column-gap: 20px;
+        }
+
+        /* Adjust spacing to accommodate 9 items per page */
+        .products-grid:after {
+          content: "";
+          flex: auto;
+        }
+      }
+
+      @media (max-width: 767px) {
+        .products-grid {
+          grid-template-columns: 1fr;
+          gap: 15px;
+        }
+      }
     </style>
   </head>
   <body>
@@ -1320,6 +1432,7 @@
           <div class="load-more-container">
             <button class="load-more prd-btn">LOAD MORE</button>
           </div>
+          <div id="pagination-container" class="pagination-container"></div>
         </main>
       </div>
     </div>
@@ -3510,13 +3623,52 @@
           this.container = container;
           this.countElement = countElement;
           this.currentPage = 1;
-          this.cardsPerPage = 24;
+          this.desktopCardsPerPage = 24;
+          this.mobileCardsPerPage = 9;
+          this.cardsPerPage = this.desktopCardsPerPage; // Default to desktop
           this.isGrid = true;
           this.showingAll = false;
           this.modal = document.getElementById("communicationModal");
-          this.setupModal();
-        }
 
+          // New pagination-related properties
+          this.paginationEnabled = false; // Will be enabled for mobile/tablet
+          this.paginationContainer = document.getElementById("pagination-container");
+          this.loadMoreContainer = document.querySelector(".load-more-container");
+
+          // Media query for mobile/tablet detection
+          this.mobileTabletQuery = window.matchMedia("(max-width: 1023px)");
+          this.mobileTabletQuery.addEventListener("change", this.handleViewportChange.bind(this));
+
+          this.setupModal();
+          this.handleViewportChange(this.mobileTabletQuery); // Initialize based on current viewport
+        }
+        // Add this new method for handling viewport changes
+        handleViewportChange(mediaQuery) {
+          this.paginationEnabled = mediaQuery.matches;
+
+          // Toggle display of pagination vs load more based on viewport
+          if (this.paginationContainer) {
+            this.paginationContainer.style.display = mediaQuery.matches ? "flex" : "none";
+          }
+
+          if (this.loadMoreContainer) {
+            this.loadMoreContainer.style.display = mediaQuery.matches ? "none" : "flex";
+          }
+
+          // Update cards per page based on viewport
+          this.cardsPerPage = mediaQuery.matches
+            ? this.mobileCardsPerPage
+            : this.desktopCardsPerPage;
+
+          // Reset to first page when switching between views
+          this.currentPage = 1;
+
+          // If we have data available, refresh the view
+          if (this.dataService) {
+            const currentData = this.dataService.getFilteredData();
+            this.renderCards(currentData);
+          }
+        }
         setupModal() {
           if (!this.modal) return;
 
@@ -3681,16 +3833,25 @@
           });
         }
 
-        renderCards(data) {
-          this.totalItems = data.length;
+        // Modify your renderCards method to handle pagination
+        renderCards(items) {
+          this.totalItems = items.length;
+          let displayedItems;
 
-          // Calculate the end index based on current page
-          const endIndex = this.currentPage * this.cardsPerPage;
-          const visibleData = data.slice(0, endIndex);
+          if (this.paginationEnabled) {
+            // For mobile/tablet: use pagination
+            const startIndex = (this.currentPage - 1) * this.cardsPerPage;
+            const endIndex = startIndex + this.cardsPerPage;
+            displayedItems = items.slice(startIndex, endIndex);
+            this.setupPagination(items);
+          } else {
+            // For desktop: keep the existing "load more" functionality
+            const endIndex = this.showingAll ? items.length : this.currentPage * this.cardsPerPage;
+            displayedItems = items.slice(0, endIndex);
+          }
 
-          this.container.innerHTML = this.constructCardHTML(visibleData);
+          this.container.innerHTML = this.constructCardHTML(displayedItems);
 
-          // Add click handlers for view buttons
           this.container.querySelectorAll(".view-details").forEach(button => {
             button.addEventListener("click", e => {
               e.preventDefault();
@@ -3700,18 +3861,190 @@
           });
 
           if (this.countElement) {
-            this.countElement.textContent = data.length;
+            this.countElement.textContent = items.length;
           }
 
-          // Update the showingAll flag
-          this.showingAll = visibleData.length >= data.length;
+          // Update showingAll flag based on current view mode
+          if (this.paginationEnabled) {
+            this.showingAll = items.length <= this.cardsPerPage;
+          } else {
+            this.showingAll = displayedItems.length >= items.length;
+          }
 
           return {
-            totalCount: data.length,
-            visibleCount: visibleData.length,
-            hasMore: visibleData.length < data.length,
+            totalCount: items.length,
+            visibleCount: displayedItems.length,
+            hasMore: displayedItems.length < items.length,
             isShowingAll: this.showingAll
           };
+        }
+        // Add pagination setup method
+        setupPagination(items) {
+          if (!this.paginationContainer) return;
+
+          this.paginationContainer.innerHTML = "";
+          const totalPages = Math.ceil(items.length / this.cardsPerPage);
+
+          if (totalPages <= 1) {
+            this.paginationContainer.style.display = "none";
+            return; // Don't show pagination if only one page
+          } else {
+            // Make sure container is displayed if we have more than one page
+            this.paginationContainer.style.display = "flex";
+          }
+
+          const paginationList = document.createElement("ul");
+          paginationList.className = "pagination";
+
+          // Previous button
+          this.addPaginationButton(
+            paginationList,
+            "Previous",
+            this.currentPage > 1 ? this.currentPage - 1 : null,
+            "prev"
+          );
+
+          // Calculate which page numbers to show
+          const pageNumbers = this.calculateVisiblePageNumbers(totalPages);
+
+          // Add page numbers
+          pageNumbers.forEach(pageNum => {
+            if (pageNum === "...") {
+              // Add ellipsis
+              const ellipsis = document.createElement("li");
+              ellipsis.className = "ellipsis";
+              ellipsis.textContent = "...";
+              paginationList.appendChild(ellipsis);
+            } else {
+              // Add regular page number
+              this.addPaginationButton(
+                paginationList,
+                pageNum,
+                pageNum,
+                pageNum === this.currentPage ? "active" : ""
+              );
+            }
+          });
+
+          // Next button
+          this.addPaginationButton(
+            paginationList,
+            "Next",
+            this.currentPage < totalPages ? this.currentPage + 1 : null,
+            "next"
+          );
+
+          this.paginationContainer.appendChild(paginationList);
+        }
+
+        // Add method to calculate visible page numbers
+        calculateVisiblePageNumbers(totalPages) {
+          const result = [];
+          const currentPage = this.currentPage;
+          const isMobile = window.matchMedia("(max-width: 767px)").matches;
+
+          // For mobile, we'll just show first, current, and last pages with ellipses
+          if (isMobile) {
+            // Always show first page
+            result.push(1);
+
+            // If we're not on the first or second page, add ellipsis
+            if (currentPage > 2) {
+              result.push("...");
+            }
+
+            // If we're not on first page, show current page
+            if (currentPage > 1 && currentPage < totalPages) {
+              result.push(currentPage);
+            }
+
+            // If we're not on last or second-to-last page, add ellipsis
+            if (currentPage < totalPages - 1) {
+              result.push("...");
+            }
+
+            // Always show last page if there's more than one page
+            if (totalPages > 1) {
+              result.push(totalPages);
+            }
+
+            return result;
+          }
+
+          // For tablet and desktop
+          // Always show first page
+          result.push(1);
+
+          // Logic for showing appropriate page numbers
+          if (currentPage <= 4) {
+            // Near the start: 1 2 3 4 5 ... 99 100
+            for (let i = 2; i <= Math.min(5, totalPages); i++) {
+              result.push(i);
+            }
+            if (totalPages > 5) {
+              result.push("...");
+              // Show last page if there are more than 6 total pages
+              if (totalPages > 6) {
+                result.push(totalPages);
+              }
+            }
+          } else if (currentPage >= totalPages - 3) {
+            // Near the end: 1 ... 96 97 98 99 100
+            if (totalPages > 5) {
+              result.push("...");
+            }
+            const startPage = Math.max(2, totalPages - 4);
+            for (let i = startPage; i <= totalPages; i++) {
+              result.push(i);
+            }
+          } else {
+            // Middle: 1 ... 9 10 11 ... 100
+            result.push("...");
+            for (let i = currentPage - 1; i <= currentPage + 1; i++) {
+              result.push(i);
+            }
+            result.push("...");
+            // Show last page
+            result.push(totalPages);
+          }
+
+          return result;
+        }
+        // Add pagination button method
+        addPaginationButton(parent, text, pageNum, className = "") {
+          const li = document.createElement("li");
+          li.className = className;
+
+          if (pageNum === null) {
+            // Disabled button
+            li.classList.add("disabled");
+            li.innerHTML = `<span>${text}</span>`;
+          } else {
+            const button = document.createElement("button");
+            button.textContent = text;
+            button.addEventListener("click", () => this.changePage(pageNum));
+            li.appendChild(button);
+          }
+
+          parent.appendChild(li);
+        }
+        // Add change page method
+        changePage(pageNum) {
+          if (!this.paginationEnabled) return;
+
+          this.currentPage = pageNum;
+          // Refresh the current view
+          const currentData = this.dataService ? this.dataService.getFilteredData() : [];
+          this.renderCards(currentData);
+
+          // Scroll to top of container
+          this.container.scrollTo({ top: 0, behavior: "smooth" });
+
+          // Dispatch event so app can know pagination changed
+          const event = new CustomEvent("paginationChanged", {
+            detail: { page: pageNum }
+          });
+          this.container.dispatchEvent(event);
         }
 
         constructCardHTML(items) {
@@ -3757,6 +4090,7 @@
             )
             .join("");
         }
+        // Modify existing resetPagination to work with both systems
 
         resetPagination() {
           this.currentPage = 1;
@@ -3764,7 +4098,13 @@
         }
 
         loadMore() {
-          this.currentPage++;
+          if (this.showingAll) {
+            // If already showing all, reset to first page
+            this.showLess();
+          } else {
+            // Otherwise, load more
+            this.currentPage++;
+          }
           return this.currentPage;
         }
 
@@ -3774,7 +4114,7 @@
         }
 
         hasMoreItemsToLoad(totalItems) {
-          return this.currentPage * this.cardsPerPage < totalItems;
+          return !this.showingAll && this.currentPage * this.cardsPerPage < totalItems;
         }
 
         setGridView(isGrid) {
@@ -3921,9 +4261,21 @@
           this.cardsContainer = document.querySelector("#communications-container");
           this.countElement = document.querySelector("#communication-count");
           this.loadMoreButton = document.querySelector(".load-more");
+          this.loadMoreContainer = document.querySelector(".load-more-container");
           this.selectedFiltersContainer = document.getElementById("filtered-tags");
 
           this.cardList = new CardListComponent(this.cardsContainer, this.countElement);
+          // Connect the data service to the card list for pagination
+          this.cardList.dataService = this.dataService;
+
+          // Listen for pagination changes
+          this.cardsContainer.addEventListener("paginationChanged", () => {
+            this.updateDisplay();
+          });
+
+          // Listen for viewport changes to update UI
+          const mediaQuery = window.matchMedia("(max-width: 1023px)");
+          mediaQuery.addEventListener("change", () => this.updateDisplay());
 
           this.initialize();
         }
@@ -4027,31 +4379,30 @@
           const filteredData = this.dataService.getFilteredData();
           const displayStatus = this.cardList.renderCards(filteredData);
 
-          // Update load more button visibility
-          if (this.loadMoreButton) {
-            // Always show button if there are items
-            this.loadMoreButton.style.display = displayStatus.totalCount > 0 ? "block" : "none";
+          // Update load more button visibility and text
+          if (this.loadMoreButton && this.loadMoreContainer) {
+            // Only show load more container if we're in desktop mode and have data
+            const isMobileTablet = window.matchMedia("(max-width: 1023px)").matches;
 
-            // Update button text based on whether all items are showing
-            if (displayStatus.isShowingAll) {
-              this.loadMoreButton.textContent = "SHOW LESS";
-              this.loadMoreButton.disabled = false;
-              this.loadMoreButton.style.opacity = "1";
-              this.loadMoreButton.style.cursor = "pointer";
-            } else {
-              this.loadMoreButton.textContent = "LOAD MORE";
-              // Disable the button if there are no more items to load
-              const hasMoreItems = displayStatus.hasMore;
-              this.loadMoreButton.disabled = !hasMoreItems;
+            if (!isMobileTablet && displayStatus.totalCount > 0) {
+              this.loadMoreContainer.style.display = "flex";
 
-              // Update button appearance if there are no more items to load
-              if (!hasMoreItems) {
-                this.loadMoreButton.style.opacity = "0.5";
-                this.loadMoreButton.style.cursor = "default";
-              } else {
+              // Update button text based on whether all items are showing
+              if (displayStatus.isShowingAll) {
+                this.loadMoreButton.textContent = "SHOW LESS";
+                this.loadMoreButton.disabled = false;
                 this.loadMoreButton.style.opacity = "1";
                 this.loadMoreButton.style.cursor = "pointer";
+              } else {
+                this.loadMoreButton.textContent = "LOAD MORE";
+                // Disable the button if there are no more items to load
+                const hasMoreItems = displayStatus.hasMore;
+                this.loadMoreButton.disabled = !hasMoreItems;
+                this.loadMoreButton.style.opacity = hasMoreItems ? "1" : "0.5";
+                this.loadMoreButton.style.cursor = hasMoreItems ? "pointer" : "default";
               }
+            } else {
+              this.loadMoreContainer.style.display = "none";
             }
           }
 
@@ -4062,22 +4413,16 @@
         setupLoadMoreButton() {
           if (this.loadMoreButton) {
             this.loadMoreButton.addEventListener("click", () => {
-              // Get current filtered data
-              const filteredData = this.dataService.getFilteredData();
-
               // Check if we're showing all items already
               if (this.loadMoreButton.textContent === "SHOW LESS") {
                 // Reset to showing only first page
                 this.cardList.showLess();
-                this.updateDisplay();
               } else {
-                // Check if there are more items to load
-                if (this.cardList.hasMoreItemsToLoad(filteredData.length)) {
-                  // Load more items
-                  this.cardList.loadMore();
-                  this.updateDisplay();
-                }
+                // Load more items
+                this.cardList.loadMore();
               }
+              // Update display after any change
+              this.updateDisplay();
             });
           }
         }
